<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">One\n Touch Go</string>
    <string name="levelName">Level %1$s</string>
    <string name="timeText">Time</string>
    <string name="moveText">Move</string>
    <string name="selectLevel">Select Level</string>

    <!-- MessageBox Begin-->
    <string name="top_message">CONGRATULATIONS</string>
    <string name="win_title">YOU WIN</string>
    <string name="bottom_message">YOU WON THIS PART, NOW THE NEW LEVEL TIME</string>
    <string name="remaining_time">%1$s SEC</string>
    <string name="gameover_title">GAME OVER</string>
    <string name="gameover_message">UPPS! GAME OVER, YOU LOSE</string>

    <string name="shareIntentTitle">Share</string>
    <string name="shareMessageTitle">One Touch Go</string>
    <string name="shareMessage">Check out One Touch Go game for your smartphone. Download it today from https://play.google.com/store/apps/details?id=com.yazilimciakli.oneway</string>

    <!-- Exit Dialog-->
    <string name="exitTitle">Exit</string>
    <string name="exitMessage">Are you sure want exit the game?</string>
    <string name="yesButton">Yes</string>
    <string name="noButton">No</string>

    <!-- Points -->
    <string name="pointsTitle">Point:</string>

    <!-- Settings -->
    <string name="settingsVibrationText">Vibration</string>
    <string name="settingsMusicText">Music</string>

    <string name="reklam_kimligi">ca-app-pub-5142565439495272~6125476348</string>
    <!-- Credit -->

    <string name="musicVolume">100</string>
    <string name="marketURL">market://details?id=https://play.google.com/store/apps/details?id=com.yazilimciakli.oneway</string>
    <string name="levelClose">Level Closed</string>
    <string name="warning">Warning!</string>
    <string name="howIsPlay">How to play?</string>
    <string name="rules">What are Rules?</string>
    <string name="producer">Producer</string>
    <string name="l1">The game is meant to be completed in one touch go. You should be complete shape on the screen any start the point</string>
    <string name="r1">Rule 1: You have to finish shape one touch go</string>
    <string name="r2">Rule 2: Do not lift your hand when you draw a figure, otherwise you do is erased</string>
    <string name="r3">Rule 3: You should be done complete the shape  in your time</string>
    <string name="r4">Rule 4: if you angry this game closed and  wait a few minute and try again later :)</string>
    <string name="r5">Rule 5: Don\'t be crack the phone :)</string>
    <string name="p1">Made by YazilimciAkli</string>
    <string name="levelArasi">ca-app-pub-5142565439495272/8804114332</string>
    <string name="nonhealt">Sorry, No Healt, please wait or watch ad</string>
    <string name="fullHealth">Full Health</string>
    <string name="lowHealth">Low Health</string>
    <string name="sorry">Sorry!</string>
    <string name="you_have_no_money">You haven\'t enough point!</string>
    <string name="healtAd">ca-app-pub-5142565439495272/8196323218</string>
</resources>