<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@drawable/curve_white"
        android:id="@+id/background"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:layout_marginTop="20dp"
        android:layout_height="125dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleLayout">

        <TextView
            android:text="@string/exitTitle"
            android:layout_height="wrap_content"
            android:id="@+id/lblExitTitle"
            android:background="@drawable/curve_red"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:textColor="@color/progressbar_text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="110dp"
        android:gravity="center">

        <Button
            android:text="@string/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnYes"
            android:background="@drawable/curve_blue"
            android:textColorLink="@android:color/white"
            android:layout_margin="10dp"
            android:textColor="@android:color/white" />

        <Button
            android:text="@string/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNo"
            android:background="@drawable/curve_blue"
            android:layout_margin="10dp"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:text="@string/exitMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/exitMessage"
        android:gravity="center"
        android:layout_marginTop="65dp"
        android:textSize="14sp" />

</RelativeLayout>