<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="340dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center">


    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@drawable/curve_white"
        android:id="@+id/background"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:layout_marginTop="20dp"
        android:layout_height="270dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/grey_pattern">

        <ImageView
            app:srcCompat="@drawable/curve_grey"
            android:id="@+id/imageView"
            android:layout_marginTop="145dp"
            android:layout_width="180dp"
            android:layout_gravity="center"
            android:layout_weight="0.00"
            android:layout_height="90dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/level_title_layout">

        <TextView
            android:text="Level 1"
            android:layout_height="wrap_content"
            android:id="@+id/lblLevelTitle"
            android:background="@drawable/curve_blue"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:textColor="@color/progressbar_text"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/win_banner"
        android:layout_marginTop="130dp">

        <TextView
            android:text="@string/win_title"
            android:layout_height="wrap_content"
            android:id="@+id/win_title"
            android:background="@drawable/curve_green"
            android:padding="10dp"
            android:textColor="#534459"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:id="@+id/remaining_time_layout">

        <TextView
            android:text="@string/remaining_time"
            android:layout_height="wrap_content"
            android:id="@+id/remaining_time"
            android:background="@drawable/curve_red"
            android:padding="10dp"
            android:textColor="#534459"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="10sp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp"
        android:id="@+id/score_layout">

        <TextView
            android:text="120"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score"
            android:textColor="#534459"
            android:layout_gravity="center_horizontal"
            android:textSize="45sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_buttons"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/score_layout"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_repeat"
                android:id="@+id/btnRestart"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:layout_margin="10dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text="@string/top_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ff6763"
        android:id="@+id/lblMessageTitle"
        android:gravity="center"
        android:layout_marginTop="65dp"
        android:minHeight="0dp"
        android:textSize="30sp" />

    <TextView
        android:text="@string/bottom_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblMessage"
        android:gravity="center"
        android:layout_marginTop="105dp"
        android:textSize="14sp" />

</RelativeLayout>